[package]
name = "letterboxd-list-sync"
version = "0.1.0"
authors = ["karsten"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
dotenv = "0.15.0"
env_logger = "0.8.2"
futures-util = { version = "0.3.12", default-features = false, features = ["alloc"] }
letterboxd = "0.3.0"
log = "0.4.13"
regex = "1.4.3"
serde_json = "1.0.61"
structopt = "0.3.21"
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
walkdir = "2.3.1"
